# Glass-player-macOS

./: .gitattributes  .gitignore  AGENTS.md  ANIME4K_METAL_FIX_PLAN.md  AUTOMATION_COMPLETE.md  AUTO_CONFIG_SETUP.md  Anime4K_AutoDownscalePre_x2.air  Anime4K_AutoDownscalePre_x4.air  Anime4K_Clamp_Highlights.air  Anime4K_Restore_CNN_M.air  Anime4K_Restore_CNN_S.air  Anime4K_Restore_CNN_Soft_M.air  Anime4K_Restore_CNN_Soft_S.air  Anime4K_Restore_CNN_Soft_VL.air  Anime4K_Restore_CNN_VL.air  Anime4K_Upscale_CNN_x2_M.air  Anime4K_Upscale_CNN_x2_S.air  Anime4K_Upscale_CNN_x2_VL.air  Anime4K_Upscale_Denoise_CNN_x2_M.air  Anime4K_Upscale_Denoise_CNN_x2_VL.air  CLAUDE.md  CODEBASE_ANALYSIS.md  CONFIGURATION_UPDATE.md  FULLY_AUTOMATED_CONFIG.md  FULLY_AUTOMATED_SETUP.md  OPTIMIZED_BRANCH_BUILD_GUIDE.md  README.md
.github/workflows/: release.yml  windows_build.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
GlassPlayer/: Anime4K_AutoDownscalePre_x2.air  Anime4K_AutoDownscalePre_x4.air  Anime4K_Clamp_Highlights.air  Anime4K_Restore_CNN_M.air  Anime4K_Restore_CNN_S.air  Anime4K_Restore_CNN_Soft_M.air  Anime4K_Restore_CNN_Soft_S.air  Anime4K_Restore_CNN_Soft_VL.air  Anime4K_Restore_CNN_VL.air  Anime4K_Upscale_CNN_x2_M.air  Anime4K_Upscale_CNN_x2_S.air  Anime4K_Upscale_CNN_x2_VL.air  Anime4K_Upscale_Denoise_CNN_x2_M.air  Anime4K_Upscale_Denoise_CNN_x2_VL.air  Info.plist  UniversalSilicon.xcconfig  build.sh
GlassPlayer/MetalShaders/: Anime4K_AutoDownscalePre_x2.metal  Anime4K_AutoDownscalePre_x4.metal  Anime4K_Clamp_Highlights.metal  Anime4K_Restore_CNN_M.metal  Anime4K_Restore_CNN_S.metal  Anime4K_Restore_CNN_Soft_M.metal  Anime4K_Restore_CNN_Soft_S.metal  Anime4K_Restore_CNN_Soft_VL.metal  Anime4K_Restore_CNN_VL.metal  Anime4K_Upscale_CNN_x2_M.metal  Anime4K_Upscale_CNN_x2_S.metal  Anime4K_Upscale_CNN_x2_VL.metal  Anime4K_Upscale_Denoise_CNN_x2_M.metal  Anime4K_Upscale_Denoise_CNN_x2_VL.metal
GlassPlayer/Sources/: Anime4KMetalPipeline.swift  Anime4KMode.swift  Anime4KRuntimePipeline.swift  AppDelegate.swift  FrameCapture.swift  MPVController.swift  NeuralAssistEngine.swift  PlayerWindow.swift  RcloneBrowser.swift  SettingsWindow.swift  Shaders.metal  UniversalSilicon.swift  VideoView.swift  ViewLayer.swift  WelcomeWindow.swift
GlassPlayer/Tools/: capture_glsl_reference.sh  capture_glsl_reference_ffmpeg.sh  preset_soak.zsh  run_parity_matrix.zsh  run_quality_comparison.sh
GlassPlayer/Tools/FrameCapture/: FrameCaptureTool.swift
GlassPlayer/Tools/QualityCompare/: QualityCompare.swift  (+1 more)
Homebrew/: install-mpv-no-vapoursynth.sh  mpv-no-vapoursynth.rb
Notes for AI/: AI_REPLICATION_GUIDE.md  README_snapshot_before_rewrite.md  parity_run7_summary.md
Scripts/: ExtractWeights.swift  export_anime4kmetal_shaders.swift  translate_anime4k_glsl.py  translate_anime4k_shaders.py  translate_required_shaders.py
TestVideos/: generate_test_pattern.sh
configs/: mpv.conf
core/rendering/: IGpuRenderer.hpp
macOS/GlassPlayer/: BridgingHeader.h  GlassPlayer.entitlements  Info.plist  UniversalSilicon.xcconfig  build.sh
metal_compute/: Anime4K_AutoDownscalePre_x2.metal  Anime4K_AutoDownscalePre_x4.metal  Anime4K_Clamp_Highlights.metal  Anime4K_Darken_Fast.metal  Anime4K_Darken_HQ.metal  Anime4K_Darken_VeryFast.metal  Anime4K_Deblur_DoG.metal  Anime4K_Deblur_Original.metal  Anime4K_Denoise_Bilateral_Mean.metal  Anime4K_Denoise_Bilateral_Median.metal  Anime4K_Denoise_Bilateral_Mode.metal  Anime4K_Restore_CNN_L.metal  Anime4K_Restore_CNN_M.metal  Anime4K_Restore_CNN_S.metal  Anime4K_Restore_CNN_Soft_L.metal  Anime4K_Restore_CNN_Soft_M.metal  Anime4K_Restore_CNN_Soft_S.metal  Anime4K_Restore_CNN_Soft_UL.metal  Anime4K_Restore_CNN_Soft_VL.metal  Anime4K_Restore_CNN_UL.metal  Anime4K_Restore_CNN_VL.metal  Anime4K_Thin_Fast.metal  Anime4K_Thin_HQ.metal  Anime4K_Thin_VeryFast.metal  Anime4K_Upscale_CNN_x2_L.metal  Anime4K_Upscale_CNN_x2_M.metal  Anime4K_Upscale_CNN_x2_S.metal  Anime4K_Upscale_CNN_x2_UL.metal  Anime4K_Upscale_CNN_x2_VL.metal  Anime4K_Upscale_DTD_x2.metal  Anime4K_Upscale_Deblur_DoG_x2.metal  Anime4K_Upscale_Deblur_Original_x2.metal  Anime4K_Upscale_Denoise_CNN_x2_L.metal  Anime4K_Upscale_Denoise_CNN_x2_M.metal  Anime4K_Upscale_Denoise_CNN_x2_S.metal  Anime4K_Upscale_Denoise_CNN_x2_UL.metal  Anime4K_Upscale_Denoise_CNN_x2_VL.metal  Anime4K_Upscale_DoG_x2.metal  Anime4K_Upscale_Original_x2.metal
reports/: GLSL_vs_Metal_Complete_Report_2026-04-02.md
reports/data/: parity_run7_metrics.csv
scripts/: aot_shader_pipeline.py
windows/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  GlassPlayer.vcxproj  GlassPlayer.vcxproj.filters  MainWindow.cpp  MainWindow.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MpvManager.cpp  MpvManager.h  MpvWidget.cpp  MpvWidget.h  RcloneBrowser.cpp  RcloneBrowser.h  RcloneBrowser.xaml.cpp  RenderHost.cpp  RenderHost.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.xaml.cpp  SettingsWindow.xaml.h  Theme.h  VulkanRenderer.cpp  VulkanRenderer.h  WelcomeWindow.cpp  WelcomeWindow.h  WelcomeWindow.xaml  WelcomeWindow.xaml.cpp  WelcomeWindow.xaml.h  WinOSIntegration.cpp  WinOSIntegration.h  XamlMetaDataProviderImpl.cpp  app.rc  download_dependencies.py  (+6 more)
windows-winui/: App.h  App.idl  App.xaml.cpp  App.xaml.h  Directory.Build.props  Directory.Build.targets  MainWindow.xaml.cpp  MainWindow.xaml.h  RcloneBrowser.h  RcloneBrowser.idl  RcloneBrowser.xaml  RcloneBrowser.xaml.cpp  RcloneBrowser.xaml.h  RenderHost.cpp  SettingsWindow.h  SettingsWindow.idl  SettingsWindow.xaml  SettingsWindow.xaml.cpp  WelcomeWindow.h  WelcomeWindow.idl  WelcomeWindow.xaml  WelcomeWindow.xaml.cpp  WinOSIntegration.cpp  WinOSIntegration.h  app.manifest  download_dependencies.py  main.cpp  packages.config  stdafx.h  windows-winui.vcxproj
windows/shaders/: Anime4K_Clamp_Highlights.glsl  Anime4K_Deblur_Original.glsl  Anime4K_Denoise_Bilateral_Mean.glsl  Anime4K_Denoise_Bilateral_Median.glsl  Anime4K_Denoise_Bilateral_Mode.glsl
(+188 files in other folders)
